@@ -39,6 +39,10 @@
 START_LIBEBML_NAMESPACE
 
 const std::string EbmlCodeVersion = "1.3.3";
-const std::string EbmlCodeDate    = __TIMESTAMP__;
+
+// Up to version 1.3.3 this library exported a build date string. As
+// this made the build non-reproducible, replace it by a placeholder to
+// remain API compatible.
+const std::string EbmlCodeDate = "Unknown";
 
 END_LIBEBML_NAMESPACE
